initial refactoring of save game mechanism including db restructure, query restructure, connection fix

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 SUPERHERO_API_KEY=""
 
 
-HOST="localhost"
-USER = "root"
-PASSWORD = ""
-AUTH_PLUGIN = "my_sql_native_password"
-DATABASE = "Game"
+DB_HOST=""
+DB_USER = ""
+DB_PASSWORD = ""
+DB_NAME = "bar_game"
+DB_PORT = ""
